test: img issues

--- a/docs/lac/u13b.md
+++ b/docs/lac/u13b.md
@@ -82,7 +82,7 @@ systemctl enable --now sshd # the --now flag along will also start the service
 systemctl enable --now nginx
 ```
 
-<img src="./assets/downloads/u13/enable-now.png"></img>
+![img](./assets/downloads/u13/enable-now.png)
 
 We should now be able to see these services are running in a myriad of ways:
 
